# hexlet_py_challenges

./: pyproject.toml  setup.cfg
hexlet_challenges/: lists.py
hexlet_challenges/lists/: is_continuous.py  triangle.py
tests/: test_hexlet_challenges.py  test_is_continuous.py  test_triangle.py
