[tool.poetry]
name = "hexlet-challenges"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.25.0"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.14.1"
flake8 = "^3.8.4"
pytest = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
